Admin: Simplify dependency test (#5827)

--- a/.github/workflows/dependency_test.yml
+++ b/.github/workflows/dependency_test.yml
@@ -6,12 +6,23 @@ on:
     - cron: '0 0 * * *'  # every day at midnight
 
 jobs:
+  prepare_list:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - id: set-matrix
+      run: echo "matrix=[$(ls -A1 moto | grep -v '.py' | awk '{ printf "%s\047%s\047", (NR==1?"":", "), $0 } END{ print "" }')]" >> $GITHUB_OUTPUT
+    - run: echo "matrix=[$(ls -A1 moto | grep -v '.py' | awk '{ printf "%s\047%s\047", (NR==1?"":", "), $0 } END{ print "" }')]"
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
   runtest:
     name: Run Dependency Test
     runs-on: ubuntu-latest
+    needs: prepare_list
     strategy:
       matrix:
         python-version: [ 3.8 ]
+        service: ${{ fromJson(needs.prepare_list.outputs.matrix) }}
 
     steps:
     - name: Checkout repo
@@ -25,11 +36,4 @@ jobs:
         AWS_ACCESS_KEY_ID: key
         AWS_SECRET_ACCESS_KEY: secret
       run: |
-        scripts/dependency_test.sh
-    - name: Archive logs
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: buildfolder-${{ matrix.python-version }}
-        path: |
-          test_results_*.log
+        scripts/dependency_test.sh ${{ matrix.service }}
