EKS: NodeGroups: Verify LaunchTemplateID when providing name, and vice versa

--- a/setup.cfg
+++ b/setup.cfg
@@ -126,7 +126,7 @@ ec2instanceconnect =
 ecr =
 ecs =
 efs = sshpubkeys>=3.1.0
-eks =
+eks = sshpubkeys>=3.1.0
 elasticache =
 elasticbeanstalk =
 elastictranscoder =
