--- a/.github/workflows/data-update_ec2-instance-types.yml
+++ b/.github/workflows/data-update_ec2-instance-types.yml
@@ -10,6 +10,7 @@ name: "DataUpdate_EC2InstanceTypes"
 on:
   schedule:
     - cron: '00 12 * * 0'
+  workflow_dispatch:
 
 jobs:
   update:
@@ -26,6 +27,7 @@ jobs:
     - name: Configure AWS
       uses: aws-actions/configure-aws-credentials@v1
       with:
+        aws-region: us-east-1
         role-to-assume: arn:aws:iam::486285699788:role/GithubActionsRole
         role-duration-seconds: 60
 
