--- a/.github/workflows/data-update_ec2-instance-offerings.yml
+++ b/.github/workflows/data-update_ec2-instance-offerings.yml
@@ -1,19 +1,20 @@
 # Data Update:
-#   EC2 Instance Types
+#   EC2 Instance Offerings
 #
 # This Github Action:
-#   - executes the script that updates the EC2 instance types that come bundled with Moto
+#   - executes the script that updates the EC2 instance offerings that come bundled with Moto
 #   - creates a PR
 #
-name: "DataUpdate_EC2InstanceTypes"
+name: "DataUpdate_EC2InstanceOfferings"
 
 on:
   schedule:
     - cron: '00 12 * * 0'
+  workflow_dispatch:
 
 jobs:
   update:
-    name: Update EC2 Instance Types
+    name: Update EC2 Instance Offerings
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' && github.repository == 'getmoto/moto' }}
     permissions:
@@ -39,12 +40,12 @@ jobs:
     - name: Pull EC2 instance types from AWS
       uses: technote-space/create-pr-action@v2
       with:
-        # GITHUB_TOKEN: ${{ secrets.PR_ACCESS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PR_ACCESS_TOKEN }}
         EXECUTE_COMMANDS: |
           pip install boto3
-          scripts/get_instance_info.py
-        COMMIT_MESSAGE: 'chore: update EC2 Instance Types'
+          scripts/ec2_get_instance_type_offerings.py
+        COMMIT_MESSAGE: 'chore: update EC2 Instance Offerings'
         COMMIT_NAME: 'Moto Admin'
         COMMIT_EMAIL: 'admin@getmoto.org'
         PR_BRANCH_NAME: 'chore-update-${PR_ID}'
-        PR_TITLE: 'chore: update EC2 Instance Types'
+        PR_TITLE: 'chore: update EC2 Instance Offerings'
